--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@
 }
 
 body {
-  background: url("/assets/images (3).jpeg");
+  background: url("/assets/3d-background-concept_52683-34988.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-blend-mode: luminosity;
@@ -40,34 +40,36 @@ body {
   width: 80%;
   max-width: 300px;
   position: absolute;
-  top: 40px;
+  top: 100px;
   z-index: 30;
 }
 
 .payment_card {
   padding: 1rem;
-  background: hsla(0, 0%, 100%, 0.18);
+  background: rgba(127, 126, 127, 0.509);
   border-radius: 12px;
   border: 1px solid hsla(0, 0%, 100%, 0.702);
-  box-shadow: inset 4px 4px 5px 0 rgba(255, 255, 255, 0.25),
-    -4px -4px 5px 0 rgba(0, 0, 0, 0.125), 0 0 10px 1px rgba(0, 0, 0, 0.25);
-  -webkit-backdrop-filter: blur(45px);
-  backdrop-filter: blur(5px) saturate(1000%);
+  box-shadow: inset 4px 4px 15px 0 rgba(255, 255, 255, 0.25),
+    -4px -4px 15px 0 rgba(0, 0, 0, 0.125), 0 0 10px 1px rgba(0, 0, 0, 0.25);
+  -webkit-backdrop-filter: blur(190px);
+  backdrop-filter: blur(190px);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   color: #ffffff;
 }
+
 .card_details_one,
 .card_details_two {
   display: flex;
   align-items: start;
   justify-content: space-between;
-  margin-bottom: 2.5rem;
+  margin-bottom: 1rem;
+  gap: 1.5rem;
 }
 
 .card_details_one {
-  margin-bottom: 2.5rem;
+    margin-bottom: 2.5rem;
 }
 
 .class_badge {
@@ -77,20 +79,20 @@ body {
 }
 
 .cardholder_number {
-  margin-bottom: 2.5rem;
-}
-
-.cardholder_number {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 2.5rem;
+}
+
+.card_expiration_date {
+    display: flex;
 }
 
 .card_details_one p {
-  font-family: cursive;
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   font-weight: 600;
-  line-height: 15px;
+  text-transform: uppercase;
 }
 
 .card_details_two div {
@@ -107,9 +109,6 @@ body {
   text-transform: uppercase;
 }
 
-.card_owner_name {
-}
-
 .card_expiration {
   margin-left: auto;
 }
@@ -117,15 +116,15 @@ body {
 .payment_form {
   width: 100%;
   position: relative;
-  top: 60px;
+  top: 120px;
   background: rgba(23, 23, 23, 0.335);
   border-radius: 15px;
   border: 1px solid hsla(159, 11, 70, 0.826);
   box-shadow: inset 4px 4px 25px 0 rgba(138, 138, 138, 0.25),
     inset -4px -4px 5px 0 rgba(138, 138, 138, 0.125),
     0 0 10px 1px rgba(0, 0, 0, 0.25);
-  -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(125px) saturate(100%);
+  -webkit-backdrop-filter: blur(125px) saturate(50%);
+  backdrop-filter: blur(125px) saturate(50%);
   padding: 2rem;
   padding-top: 11rem;
 }
@@ -153,7 +152,7 @@ select {
   border-radius: 5px;
   border: 1px solid #333;
   outline: none;
-  box-shadow: inset 4px 4px 5px 0 rgba(92, 91, 91, 0.25),
+  box-shadow: inset 4px 4px 50px 0 rgba(92, 91, 91, 0.25),
     -4px -4px 5px 0 rgba(0, 0, 0, 0.125);
 }
 
@@ -176,8 +175,13 @@ input::-webkit-outer-spin-button {
   gap: 1.3rem;
 }
 
-.ccv {
+.cvv {
   margin-left: auto;
+}
+
+.labels {
+    display: flex;
+    justify-content: space-between;
 }
 
 .submit_btn {
@@ -188,15 +192,33 @@ input::-webkit-outer-spin-button {
   letter-spacing: 0.2rem;
   text-transform: uppercase;
   background-color: rgba(159, 11, 70, 0.969);
-  color: #0a0a0a;
+  color: #fbfbfb;
   padding: 1rem;
-  border: 1px solid #333;
+  border: 1px solid rgba(159, 11, 70, 0.969);
   outline: none;
-  box-shadow: inset 4px 4px 5px 0 rgba(92, 91, 91, 0.25),
-    -4px -4px 5px 0 rgba(0, 0, 0, 0.125);
   cursor: pointer;
 }
 
 .submit_btn:hover {
-  background-color: #d1cdcd;
+    border: 1px solid rgba(159, 11, 70, 0.969);
+    background-color: #ffffff;
+  color: rgba(159, 11, 70, 0.969);
+}
+
+.alert_box {
+    background-color: #fff;
+    font-weight: 500;
+    font-size: 1.1rem;
+    padding: 1rem;
+    border-radius: 8px;
+    position: absolute;
+    top: 24px;
+    z-index: 60;
+    display: none;
+}
+
+@media screen and (min-height: 740px){
+    body {
+        height: 100vh;
+    }
 }
