Fixed background display

--- a/style.scss
+++ b/style.scss
@@ -9,7 +9,7 @@
 }
 
 body {
-  background: url("assets/3d-background-concept_52683-34988.webp");
+  background-image: url("../assets/3d-background-concept_52683-34988.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-blend-mode: luminosity;
