--- a/style.scss
+++ b/style.scss
@@ -41,8 +41,8 @@ body {
   border: 1px solid hsla(0, 0%, 100%, 0.702);
   box-shadow: inset 4px 4px 15px 0 rgba(255, 255, 255, 0.25),
     -4px -4px 15px 0 rgba(0, 0, 0, 0.125), 0 0 10px 1px rgba(0, 0, 0, 0.25);
-  -webkit-backdrop-filter: blur(190px);
-  backdrop-filter: blur(190px);
+  -webkit-backdrop-filter: blur(250px);
+  backdrop-filter: blur(250px);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -52,19 +52,19 @@ body {
 .card_details_one,
 .card_details_two {
   display: flex;
-  align-items: start;
+  align-items: center;
   justify-content: space-between;
   margin-bottom: 1rem;
   gap: 1.5rem;
 }
 
 .card_details_one {
-    margin-bottom: 2.5rem;
+  margin-bottom: 2.5rem;
 }
 
 .class_badge {
-  width: 40px;
-  height: 30px;
+  width: 70px;
+  height: 45px;
   border-radius: 5px;
 }
 
@@ -76,13 +76,12 @@ body {
 }
 
 .card_expiration_date {
-    display: flex;
+  display: flex;
 }
 
-.card_details_one p {
-  font-size: 1.2rem;
-  font-weight: 600;
-  text-transform: uppercase;
+.card_issuer {
+  width: 80px;
+  object-fit: contain;
 }
 
 .card_details_two div {
@@ -113,8 +112,8 @@ body {
   box-shadow: inset 4px 4px 25px 0 rgba(138, 138, 138, 0.25),
     inset -4px -4px 5px 0 rgba(138, 138, 138, 0.125),
     0 0 10px 1px rgba(0, 0, 0, 0.25);
-  -webkit-backdrop-filter: blur(125px) saturate(50%);
-  backdrop-filter: blur(125px) saturate(50%);
+  -webkit-backdrop-filter: blur(225px) saturate(50%);
+  backdrop-filter: blur(225px) saturate(50%);
   padding: 2rem;
   padding-top: 11rem;
 }
@@ -146,6 +145,13 @@ select {
     -4px -4px 5px 0 rgba(0, 0, 0, 0.125);
 }
 
+.message1,
+.message2,
+.message3,
+.message4 {
+  color: crimson;
+}
+
 input::-webkit-inner-spin-button,
 input::-webkit-outer-spin-button {
   -webkit-appearance: none;
@@ -170,8 +176,8 @@ input::-webkit-outer-spin-button {
 }
 
 .labels {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .submit_btn {
@@ -190,25 +196,26 @@ input::-webkit-outer-spin-button {
 }
 
 .submit_btn:hover {
-    border: 1px solid rgba(159, 11, 70, 0.969);
-    background-color: #ffffff;
+  border: 1px solid rgba(159, 11, 70, 0.969);
+  background-color: #ffffff;
   color: rgba(159, 11, 70, 0.969);
 }
 
 .alert_box {
-    background-color: #fff;
-    font-weight: 500;
-    font-size: 1.1rem;
-    padding: 1rem;
-    border-radius: 8px;
-    position: absolute;
-    top: 24px;
-    z-index: 60;
-    display: none;
+  background-color: #fff;
+  font-weight: 500;
+  font-size: 1.1rem;
+  padding: 1rem;
+  border-radius: 8px;
+  position: absolute;
+  top: 24px;
+  z-index: 60;
+  display: none;
+  color: crimson;
 }
 
-@media screen and (min-height: 740px){
-    body {
-        height: 100vh;
-    }
+@media screen and (min-height: 740px) {
+  body {
+    height: 100vh;
+  }
 }
